--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,7 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/MINTCHOCO
+    #    url: jdbc:mysql://localhost:3306/MINTCHOCO?rewriteBatchedStatements=true&profileSQL=true&logger=Slf4JLogger&maxQuerySizeToLog=200
+    url: jdbc:mysql://localhost:3306/MINTCHOCO?rewriteBatchedStatements=true
     username: woong
     password: Jhan00254!
   jpa:
@@ -11,6 +12,7 @@ spring:
       hibernate:
         format_sql: true
         highlight_sql: true
+        dialect: org.hibernate.dialect.MySQLDialect
   devtools:
     livereload:
       enabled: true
@@ -32,3 +34,11 @@ file:
   image:
     ext: .jpg,.jpeg,.svg,.png
     max-size: 5242880
+logging:
+  level:
+    org:
+      springframework:
+        jdbc:
+          core:
+            JdbcTemplate: DEBUG
+            StatementCreatorUtils: DEBUG
